--- a/index.html
+++ b/index.html
@@ -23,15 +23,19 @@
 <body>
     <div  class="menu">
     <label class="label"> Nama Perusahaan</label>
+      <form class="container-form">
+        <input type="search" class="search" placeholder="Search">
+        <button class="button-search">Search</button>
+      </form>
     <ul>
         <li><a href="#">Home</a></li>
-            <li><a href="#">Pages <i class="fas fa-caret-down"></i> </a>
+        <li id="pages"><a href="#">Pages <i class="fas fa-caret-down"></i> </a>
                    <ul class="dropdown">
                         <li><a href="#">Photos</a></li>
                         <li><a href="#">Document</a></li>
                         <li><a href="#">Image</a></li>
                     </ul>
-            </li>
+        </li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
