--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </form>
     <ul>
         <li><a href="#">Home</a></li>
-        <li id="pages"><a href="#">Pages <i class="fas fa-caret-down"></i> </a>
+        <li class="pages"><a href="#">Pages <i class="fas fa-caret-down"></i> </a>
                    <ul class="dropdown">
                         <li><a href="#">Photos</a></li>
                         <li><a href="#">Document</a></li>
@@ -47,22 +47,7 @@
     </div>
  
 <script src="index.js"></script>
-  
-    <script>
-       
 
-        var forEach=function(t,o,r){if("[object Object]"===Object.prototype.toString.call(t))for(var c in t)Object.prototype.hasOwnProperty.call(t,c)&&o.call(r,t[c],c,t);else for(var e=0,l=t.length;l>e;e++)o.call(r,t[e],e,t)};
-
-        var hamburgers = document.querySelectorAll(".hamburger");
-        if (hamburgers.length > 0) {
-          forEach(hamburgers, function(hamburger) {
-            hamburger.addEventListener("click", function() {
-              this.classList.toggle("is-active");
-            }, false);
-          });
-        }
-
-      </script>
 
 </body>
 </html>
